{
    "name": "InputActions",
    "maps": [
        {
            "name": "GamePlayInput",
            "id": "2d5b7bac-b212-46eb-818b-27f0fea2bd97",
            "actions": [
                {
                    "name": "HandlePressedMove",
                    "type": "Value",
                    "id": "cfe3a5cb-e17e-4858-8137-b870d6713a15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandleMove",
                    "type": "Value",
                    "id": "0efc2cc1-0fda-4804-8e05-4d7b5a1e353a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Press",
                    "type": "Value",
                    "id": "26dda025-7ded-4eb8-aca0-a6ec59a127ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "1385000c-fdf0-4c2a-b836-10a038a95e48",
                    "path": "OneModifier",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "35858049-081c-4aa3-a89e-0ca493c00185",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "ef131cd9-e35f-4ab3-977e-49246ffc4df8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "e82a670c-8f40-44e4-9d15-0db17a3e441f",
                    "path": "OneModifier",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "21ae1be7-df11-4e1b-8bab-16ee7ef6143a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8eaae3c2-8543-45d3-84d7-4d3afbaed111",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandlePressedMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0d6095f0-e027-4d78-a37f-7b5d94618342",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36420ed7-40d3-4d6d-95c7-d2530ecb112a",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "fb1209cc-f2d5-4330-92e5-456f58c2086f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "481b82b5-f2da-40a5-ad48-6a9ee2e8458d",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "523c28dc-1d23-49f8-8c95-b0f47c023e73",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "2992c0bf-9e6d-41be-811b-e321590e8f81",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "06961fbe-9fa0-4e19-bac5-17dea246a034",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "13d45ca8-adf3-49f0-af49-c24f754367f8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "GameplayWindowsInput",
            "id": "c2282313-7a69-49a5-b109-b5fe9a4a59c6",
            "actions": [
                {
                    "name": "UndoButtonPressed",
                    "type": "Button",
                    "id": "646ec2ec-e25c-4092-b2b3-0c23cb8fccd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveBuildingButtonPressed",
                    "type": "Button",
                    "id": "69b2f8ad-bfb2-42d0-9e47-5cb0c47558c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReplaceBuildingButtonPressed",
                    "type": "Button",
                    "id": "aec0ae4d-bffd-442f-99b1-adfa7f366123",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef7a82fa-6d82-4f8c-9339-6993b49f4fac",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d31f951-6701-46c4-b2f4-833b541ec097",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveBuildingButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26f690c6-de53-4f73-af40-8eacb1880b52",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReplaceBuildingButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SandboxWindowsInput",
            "id": "09895669-232b-488c-a572-ca2dda9dbc84",
            "actions": [
                {
                    "name": "ClearTilesButtonPressed",
                    "type": "Button",
                    "id": "1007a508-8622-4eec-bca3-f4ab24545795",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildingsButtonPressed",
                    "type": "Button",
                    "id": "62892cb2-c31f-42a9-a735-fc5d98b6396a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GroundsButtonPressed",
                    "type": "Button",
                    "id": "0670fc82-d949-474d-80c3-1d50b2c82436",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b454731-5509-4b1f-bf21-24ef7a136381",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearTilesButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e27edb5-57ac-4456-9679-c5e9dd81bed5",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildingsButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cb85f8e-d1ef-4d89-b722-472adba47ecf",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundsButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SandboxInput",
            "id": "a69ce48c-9319-487a-8377-022a718a8cbb",
            "actions": [
                {
                    "name": "FirstTouch",
                    "type": "Value",
                    "id": "e2cf12b3-6323-4f3d-b230-9bd96a71bdb0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouch",
                    "type": "Value",
                    "id": "fb697694-6de3-402e-9f0d-54b275f05d22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "a1d00a99-178c-4adf-8292-773dbb5224b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateWorld",
                    "type": "Value",
                    "id": "afb3eafc-c528-4a43-8b1b-6d994ff8e55a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "562cebfa-c4e3-4680-bf4c-188a85f07929",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d68ef98-09f2-4ea4-9340-b44d357e2081",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2edc70b2-8cd3-4adf-902a-d56cfd28426c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "4345b63c-e8e4-4e59-8e64-5fcf97e66817",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2bfdba5a-e59e-4c26-b352-9c0a092b9b56",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "2826f09b-74cc-4305-8cbc-4946f945482f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "fbcf65ab-1675-42b8-8b1b-2700077a1e41",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "4fc62be0-b317-4717-a737-1ec845994595",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "1b683eb9-4189-4a12-b092-dc4f12e46c39",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWorld",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}